--- a/saitae-web/src/main/webapp/pages/solicitudCP.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudCP.xhtml
@@ -8,7 +8,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="content">
 
-        <h:form id="form">
+        <h:form id="form" style="width: 60%; margin: 0 auto;">
             <f:event listener="#{solicitudCPController.postRender()}" type="preRenderView"/>
             <h1 align="center">Solicitud de citas psicológicas</h1>
             <h:panelGrid columns="3">
