--- a/saitae-web/src/main/webapp/pages/citasPSH.xhtml
+++ b/saitae-web/src/main/webapp/pages/citasPSH.xhtml
@@ -22,7 +22,7 @@
                                 update="form"/>
                     </p:selectOneMenu>
                 </h:panelGrid>
-                <h1 align="center">Historial de solicitudes de Reserva de equipo</h1>
+                <h1 align="center">Historial de solicitudes de citas para consultas psicológicas.</h1>
                 <p:dataTable id="hcitas" value="#{citasPsHController.citas}" var="c"
                              paginator="true" rows="7" selection="#{citasPsHController.selected}" 
                              selectionMode="single" rowKey="#{c.citaPsicologiaPK}" 
