--- a/saitae-web/src/main/webapp/pages/cvista.xhtml
+++ b/saitae-web/src/main/webapp/pages/cvista.xhtml
@@ -31,15 +31,19 @@
                                     <h:outputText value="#{a.idacceso}"/>
                                 </p:column>
 
-                                <p:column headerText="Nombre">
+                                <p:column headerText="Nombre" filterBy="#{a.accesoNombre}">
                                     <p:cellEditor>
-                                        <f:facet name="output"><h:outputText value="#{a.accesoNombre}" /></f:facet>
-                                        <f:facet name="input"><p:inputText value="#{a.accesoNombre}" 
-                                                                           style="width:100%" label="Nombre"/></f:facet>
+                                        <f:facet name="output">
+                                            <h:outputText value="#{a.accesoNombre}" />
+                                        </f:facet>
+                                        <f:facet name="input">
+                                            <p:inputText value="#{a.accesoNombre}" 
+                                                         style="width:100%" label="Nombre"/>
+                                        </f:facet>
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column headerText="Índice">
+                                <p:column headerText="Índice" filterBy="#{a.accesoIndice.accesoNombre}">
                                     <p:cellEditor>
                                         <f:facet name="output">
                                             <h:outputText value="#{a.accesoIndice.accesoNombre}" />
@@ -55,11 +59,15 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column headerText="URL relativo">
+                                <p:column headerText="URL relativo" filterBy="#{a.accesourl}">
                                     <p:cellEditor>
-                                        <f:facet name="output"><h:outputText value="#{a.accesourl}" /></f:facet>
-                                        <f:facet name="input"><p:inputText value="#{a.accesourl}" 
-                                                                           style="width:100%" label="url"/></f:facet>
+                                        <f:facet name="output">
+                                            <h:outputText value="#{a.accesourl}" />
+                                        </f:facet>
+                                        <f:facet name="input">
+                                            <p:inputText value="#{a.accesourl}" 
+                                                         style="width:100%" label="url"/>
+                                        </f:facet>
                                     </p:cellEditor>
                                 </p:column>
                                 <p:column headerText="URL del tutorial">
@@ -73,11 +81,15 @@
                                         </f:facet>
                                     </p:cellEditor>
                                 </p:column>
-                                <p:column headerText="Comentario">
+                                <p:column headerText="Icono">
                                     <p:cellEditor>
-                                        <f:facet name="output"><h:outputText value="#{a.accesoComentario}" /></f:facet>
-                                        <f:facet name="input"><p:inputText value="#{a.accesoComentario}" 
-                                                                           style="width:100%" label=""/></f:facet>
+                                        <f:facet name="output">
+                                            <h:outputText value="#{a.accesoComentario}" />
+                                        </f:facet>
+                                        <f:facet name="input">
+                                            <p:inputText value="#{a.accesoComentario}" 
+                                                         style="width:100%" label=""/>
+                                        </f:facet>
                                     </p:cellEditor>
                                 </p:column>
                                 <p:column style="width:35px">
