--- a/saitae-web/src/main/webapp/pages/permisoE.xhtml
+++ b/saitae-web/src/main/webapp/pages/permisoE.xhtml
@@ -70,7 +70,7 @@
 
                         <p:outputLabel value="Constancia: " />
                         <h:panelGrid columns="3">
-                            <p:fileUpload id="partida" fileUploadListener="#{permisoEstController.notas}" 
+                            <p:fileUpload id="partida" listener="#{permisoEstController.notas}" 
                                           mode="advanced" invalidSizeMessage="El archivo sobrepasa el límited de 1MB."
                                           invalidFileMessage="El archivo seleccionado no es válido"
                                           update="messagesp"  sizeLimit="1000000" label="Elejir"
